--- a/src/_components/site-footer.webc
+++ b/src/_components/site-footer.webc
@@ -20,3 +20,32 @@
   <img id="greenweb-badge" width="200" height="95" src="https://app.greenweb.org/api/v3/greencheckimage/dwk.io?nocache=true" alt="This website runs on green hosting - verified by thegreenwebfoundation.org">
   </footer>
 </site-footer>
+
+<style>
+  footer {
+    text-align: center;
+    clear: both;
+}
+
+footer>ul>li {
+    display: inline-block;
+    width: 4rem;
+    padding: 1rem;
+}
+
+footer>ul>li img {
+    width: 2rem; 
+    height: 2rem;
+}
+
+footer p img {
+    width: 1rem; 
+    height: 1rem;
+    margin-left: 0.5rem;
+    vertical-align: text-bottom;
+}
+
+footer img#greenweb-badge {
+    margin-top: 4rem;
+}
+</style>
