--- a/src/_components/site-header.webc
+++ b/src/_components/site-header.webc
@@ -7,3 +7,23 @@
       <span webc:nokeep @text="$data.title ?? $data.site.title"></span></h1>
   </header>
 </site-header>
+
+<style>
+header {
+    display: flex;
+    gap: 1em .5em;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 1em;
+}
+
+header img {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 0.5em;
+}
+
+a.hero-image {
+    text-decoration: none;
+}
+</style>
