--- a/src/robots.txt.webc
+++ b/src/robots.txt.webc
@@ -2,4 +2,4 @@
 eleventyExcludeFromCollections: true
 permalink: /robots.txt
 ---
-Sitemap: <p webc:nokeep @text="`${$data.site.url}/sitemap.xml`"></p>
+Sitemap: https://dwk.io/sitemap.xml
