--- a/src/_headers.webc
+++ b/src/_headers.webc
@@ -3,3 +3,7 @@ eleventyExcludeFromCollections: true
 permalink: /_headers
 ---
 # See https://developers.cloudflare.com/pages/configuration/headers/
+
+/
+  X-Content-Type-Options: nosniff
+  X-Frame-Options: DENY
