--- a/src/_layouts/base.webc
+++ b/src/_layouts/base.webc
@@ -1,32 +1,32 @@
 <!doctype html>
-<html :lang="$data.lang ?? 'en'">
+<!---
+  A base layout for Eleventy WebC projects.
+
+  Just a simple HTML5 document structure with a header, main content area, and footer.
+  Defers CSS and JS bundles are at the end of the document for better performance.
+
+--->
+<html :lang="$data.site.lang ?? 'en'">
   <head>
     <title @text="$data.title ? `${$data.title} — ${$data.site.title}` : $data.site.title"></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="generator" :content="$data.eleventy.generator">
-    <meta webc:if="$data.schema.fediverse" property="fediverse:creator" :content="$data.schema.fediverse">
-    <meta webc:if="$data.site.colorScheme" name="color-scheme" :content="$data.site.colorScheme">
-    <meta webc:if="$data.description" name="description" :content="$data.description ?? $data.schema.description">
-    <link webc:if="$data.schema?.url || $data.page?.url" rel="canonical" :href="$data.schema?.url ?? (new URL($data.page.url, $data.site.url)).href">
-    <link webc:if="$data.schema['@type']=='Person'" rel="me author" :href="$data.schema.email">
-    <link webc:if="$data.schema.author?.email" rel="author" :href="$data.schema.author.email">
-    <link webc:if="$data.schema.author?.url" rel="author" :href="$data.schema.author.url">
-    <link webc:if="$data.schema.license" rel="licence" :href="$data.site.license">
-    <link webc:if="$data.site.favicon" rel="icon" :href="$data.site.favicon">
-    <link webc:if="$data.site.appleTouchIcon" rel="icon" :href="$data.site.appleTouchIcon">
-    <link webc:if="$data.site.headLinks" webc:for="rel, href in $data.site.headLinks" :href="href" :rel="rel">
-    <link webc:keep rel="stylesheet" :href="getBundleFileUrl('css')">
-    <link rel="stylesheet" href="/css/index.css">
-    <script webc:if="$data.schema" webc:keep type="application/ld+json" @raw="getSchema($data.schema)"></script>
+    <meta webc:is="head-meta" />
+    <link webc:is="head-links" />
+    <!---
+      Relys on the 11ty data cascade to generate a schema.org JSON-LD script tag from the `$data.schema` object.
+    --->
+    <script webc:if="$data.schema" webc:keep type="application/ld+json" @raw="getSchema({
+      ...$data.schema, 
+      url: (new URL($data.page.url, $data.site?.url)),
+    })"></script>
     <script webc:keep :src="getBundleFileUrl('js')"></script>
     <script src="/js/index.js"></script>
   </head>
   <body>
-    <site-header></site-header>
+    <header></header>
     <main>
       <slot><template webc:nokeep @raw="this.content"></template></slot>
     </main>
-    <site-footer></site-footer>
+    <footer></footer>
     <style webc:keep @raw="getBundle('css', 'defer')"></style>
 		<script webc:keep @raw="getBundle('js', 'defer')"></script>
   </body>
