--- a/src/sitemap.xml.webc
+++ b/src/sitemap.xml.webc
@@ -2,7 +2,7 @@
 eleventyExcludeFromCollections: true
 permalink: /sitemap.xml
 ---
-<?xml version="1.0" encoding="utf-8"?>
+<template webc:nokeep webc:raw @raw='"<?xml version=\"1.0\" encoding=\"utf-8\" ?>"'></template>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
   <url webc:for="page of collections.all" webc:if="!page.data.draft">
     <loc @text="new URL(page.url, $data.site.url).href"></loc>
