--- a/src/sitemap.xml.webc
+++ b/src/sitemap.xml.webc
@@ -6,7 +6,7 @@ permalink: /sitemap.xml
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
   <url webc:for="page of collections.all" webc:if="!page.data.draft">
     <loc @text="new URL(page.url, $data.site.url).href"></loc>
-    <lastmod @text="(page.date ?? new Date()).toISOString()"></lastmod>
+    <lastmod @text="(new Date(page.date ?? undefined)).toISOString()"></lastmod>
     <changefreq @text="page.data.changeFreq ?? 'yearly'"></changefreq>
   </url>
 </urlset>
