--- a/src/.well-known/dnt-policy.txt.webc
+++ b/src/.well-known/dnt-policy.txt.webc
@@ -1,10 +1,14 @@
+---
+eleventyExcludeFromCollections: true
+permalink: /.well-known/dnt-policy.txt
+---
 Do Not Track Compliance Policy 
 
 Version 1.0
 
 This domain complies with user opt-outs from tracking via the "Do Not Track"
 or "DNT" header  [http://www.w3.org/TR/tracking-dnt/].  This file will always
-be posted via HTTPS at https://dwk.io/.well-known/dnt-policy.txt
+be posted via HTTPS at <template webc:nokeep @raw="new URL('/.well-known/dnt-policy.txt', $data.site.url)"></template>
 to indicate this fact.
 
 SCOPE
