--- a/src/.well-known/security.txt.webc
+++ b/src/.well-known/security.txt.webc
@@ -1,8 +1,9 @@
 ---
 eleventyExcludeFromCollections: true
 permalink: /.well-known/security.txt
+_documentation: https://securitytxt.org
 ---
-Contact: mailto:security@dwk.io
-Expires: <p webc:nokeep @text="new Date(Date.now() + 365 * 24 * 60 * 60 * 1000).toISOString()"></p>
-Preferred-Languages: en
-Canonical: https://dwk.io/.well-known/security.txt
+Contact: <template webc:nokeep @text="$data.site.securityContact"></template>
+Expires: <template webc:nokeep @text="new Date(Date.now() + 365 * 24 * 60 * 60 * 1000).toISOString()"></template>
+Preferred-Languages: <template webc:nokeep @text="$data.site.lang"></template>
+Canonical: <template webc:nokeep @raw="new URL('/.well-known/security.txt', $data.site.url)"></template>
