--- a/src/_layouts/base.webc
+++ b/src/_layouts/base.webc
@@ -10,16 +10,8 @@
   <head>
     <title @text="$data.title ? `${$data.title} — ${$data.site.title}` : $data.site.title"></title>
     <meta webc:is="head-meta" />
-    <link webc:is="head-links" />
-    <!---
-      Relys on the 11ty data cascade to generate a schema.org JSON-LD script tag from the `$data.schema` object.
-    --->
-    <script webc:if="$data.schema" webc:keep type="application/ld+json" @raw="getSchema({
-      ...$data.schema, 
-      url: (new URL($data.page.url, $data.site?.url)),
-    })"></script>
-    <script webc:keep :src="getBundleFileUrl('js')"></script>
-    <script src="/js/index.js"></script>
+    <link webc:is="head-link" />
+    <script webc:is="head-script"></script>
   </head>
   <body>
     <header></header>
